# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
day-01/: Cargo.toml  README.md
day-02/: Cargo.toml  README.md
day-03/: Cargo.toml  README.md
day-03/src/: lib.rs
