[workspace]
resolver = "2"
members = [
    "day-*",
]

[workspace.dependencies]
anyhow = "1.0"
indoc = "2.0"
itertools = "0.13"
linked-hash-map = "0.5"
rstest = "0.23"

# glam
glam = "0.29"

# num
num = "0.4"
num-integer = "0.1"

# nom
nom = "7.1"
nom_locate = "4.2"

# petgraph
petgraph = "0.6"
rustworkx-core = "0.15"

